--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Sriracha&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Rubik&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -6,9 +6,13 @@
           box-sizing: border-box;
 }
 
+i {
+  pointer-events: none;
+}
+
 body {
-  background: -webkit-gradient(linear, left top, right top, from(#00c0b6), to(#620080));
-  background: linear-gradient(90deg, #00c0b6, #620080);
+  background-image: url("../pexels-longxiang-qian-1710489.jpg");
+  background-size: cover;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -23,8 +27,8 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  font-family: "Sriracha", cursive;
-  color: white;
+  font-family: "Rubik", sans-serif;
+  color: black;
 }
 
 body h1 {
@@ -35,9 +39,54 @@ body form input,
 body form button {
   font-size: 1.5rem;
   padding: 0.5rem 1rem;
+  border-radius: 25px;
 }
 
 body form input[type="number"] {
   width: 80px;
+}
+
+body form button {
+  background-color: #005de9;
+}
+
+body section div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 1rem 0;
+}
+
+body section div p {
+  margin: 0 1rem;
+  border-radius: 25px;
+  background-color: white;
+  font-size: 3rem;
+  padding: 0.5rem 1rem;
+}
+
+body section div button {
+  font-size: 1.5rem;
+  padding: 1.5rem;
+  border-radius: 25rem;
+  margin: 0 0.5rem;
+}
+
+body section {
+  margin: 2rem 0;
+}
+
+.trash {
+  background-color: red;
+}
+
+.check {
+  background-color: green;
+}
+
+.done {
+  opacity: 0.5;
+  text-decoration: line-through;
+  text-decoration-thickness: 0.2rem;
 }
 /*# sourceMappingURL=style.css.map */
